# pir-Abschlussprojekt

./: .gitignore  .travis.yml  LICENSE.txt  README.md
PokemonBattleArena/: Cargo.toml
ci/: check-basic-style.sh  check-rustfmt.sh  test-all.sh
pokemon_battle_arena/: Cargo.toml  pokemon_battle_arena.sublime-project  pokemon_battle_arena.sublime-workspace
pokemon_battle_arena/src/: main.rs  player.rs  unique.rs
pokemon_battle_arena/src/arena/: mod.rs  standard_arena.rs  to_ui.rs
pokemon_battle_arena/src/db/: determinant_values.rs  enums.rs  mod.rs  movedex.rs  moves.rs  natures.rs  pokedex.rs  pokemon.rs  pokemon_model.rs  pokemon_token.rs  resolve.rs  stats.rs  unique.rs
pokemon_battle_arena/src/db/tables/: moves_whole.csv  pokemon.csv
pokemon_battle_arena/src/graphic/: gui.rs  mod.rs  windows.rs
pokemon_battle_arena/src/player/: mod.rs
pokemon_battle_arena/src/player/human/: mod.rs
pokemon_battle_arena/src/player/ki/: mod.rs
